@@ -7,17 +7,20 @@ our $VERSION = '0.10';
 
 use parent 'Test2::Event';
 
-use Test2::Util::HashBase qw( causes_fail warning );
+use Test2::Util::HashBase qw( warning );
 
 sub init {
-    $_[0]->{ +CAUSES_FAIL } = 1       unless exists $_[0]->{ +CAUSES_FAIL };
-    $_[0]->{ +WARNING }     = 'undef' unless defined $_[0]->{ +WARNING };
+    $_[0]->{ +WARNING } = 'undef' unless defined $_[0]->{ +WARNING };
 }
 
-sub summary { $_[0]->{ +WARNING } }
-
-sub increments_count {1}
-sub diagnostics      {1}
+sub facet_data {
+    return {
+        assert => {
+            pass    => 0,
+            details => $_[0]->{ +WARNING },
+        },
+    };
+}
 
 1;
 
